init y webpack + babel config #3

--- a/package.json
+++ b/package.json
@@ -18,7 +18,18 @@
   },
   "homepage": "https://github.com/educacionchcml/gauchitoteca#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "babel-loader": "^9.1.2",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2"
   }
 }
