--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
