--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-react": "^7.18.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "firebase": "^9.16.0",
